2012-12-06	Marc Sylvestre	<marc.sylvestre@manhydra.com>

	* processing.c: Repaired Defect in Remote File Processing;
	Because curlCallback() returned size of post-processed content,
	libcurl was not able to properly iterate through the content,
	thus only returning the first batch of retrieved content, which
	was why remote files appeared to have produced very little
	results, if any. By having curlCallback() returned the
	pre-processed size (realsize), it was able to accurately
	iternate, retrieving the content in its entirety.

2012-12-01	Marc Sylvestre	<marc.sylvestre@manhydra.com>

	* temurah.c: Excess newline removal; Removed the extra newline
	character whenever receiving word or phrase from stdin.

2012-11-12	Marc Sylvestre	<marc.sylvestre@manhydra.com>

	* processing.c: More memory optimization; because
	stripNonAlpha() and stripMarkupTags() return malloc'd addresses,
	it's best to have pointers other than fb->fbuffer to handle
	their processed text streams, then strncpy'd the finished
	product to a freshly malloc'd fb->fbuffer. This helps to free
	(nearly) all malloc'd memory when the programs are about to end.

2012-11-12	Marc Sylvestre	<marc.sylvestre@manhydra.com>

	* processing.c: Proper memory optimization; pointers returned by
	stripNonAlpha() and stripMarkupTags() have malloc'd addresses
	that were not being freed properly.

2012-11-10	Marc Sylvestre	<marc.sylvestre@manhydra.com>

	* processing.c: stripMarkupTags() modified to explicitly exclude
	not only <script> tags but all content preceding </script>.

2012-11-09	Marc Sylvestre	<marc.sylvestre@manhydra.com>

	* processing.c: generateLists(): Optimized collection and
	sorting; phrases are only collected and sorted if "ltype" is
	explicitly set to "phraselist". This will ensure faster result
	searches for words only.

2012-11-08	Marc Sylvestre	<marc.sylvestre@manhydra.com>

	* processing.c: Added libcurl to allow for searching results on
	remote files, web pages, etc.
